--- a/app/src/main/res/layout/activity_home_rummy.xml
+++ b/app/src/main/res/layout/activity_home_rummy.xml
@@ -58,9 +58,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:background="@drawable/ic_newback"
-
-                        />
+                        android:background="@drawable/ic_newback" />
 
 
                     <de.hdodenhof.circleimageview.CircleImageView
