--- a/app/src/main/res/winning_breakup/layout/layout_winning_conversion_complete.xml
+++ b/app/src/main/res/winning_breakup/layout/layout_winning_conversion_complete.xml
@@ -31,7 +31,9 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/rubik_medium"
         android:gravity="center_horizontal"
-        android:text="@{`₹`+viewModel.depositAmount}"
+        app:setAmountFormat="@{viewModel.depositAmount}"
+        app:placeHolder="@{@string/rupees}"
+        app:placeHolderAtStart="@{true}"
         android:textColor="@color/text_color8"
         android:textSize="32sp"
         android:layout_marginTop="16dp"
