--- a/app/src/main/res/winning_breakup/layout/layout_winning_conversion_field.xml
+++ b/app/src/main/res/winning_breakup/layout/layout_winning_conversion_field.xml
@@ -99,7 +99,7 @@
                 android:fontFamily="@font/rubik_medium"
                 android:gravity="center"
                 android:hint="0"
-                android:textColorHint="@color/text_color6"
+                android:textColorHint="@color/text_color2"
                 android:imeOptions="actionDone"
                 android:inputType="number"
                 android:maxLength="8"
@@ -204,9 +204,7 @@
             android:layout_marginEnd="18dp"
             android:textColor="@color/text_color8"
             android:textSize="14sp"
-            app:setDecimalAmount="@{viewModel.depositAmount}"
-            app:placeHolderAtStart="@{true}"
-            app:placeHolder="@{`₹`}"
+            android:text="@{viewModel.depositAmountStr}"
             android:layout_marginStart="8dp"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toBottomOf="@id/txtDepositHint"
