--- a/app/src/main/res/layout/item_withdraw_tds_rummy.xml
+++ b/app/src/main/res/layout/item_withdraw_tds_rummy.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <import type="android.view.View"/>
         <import type="android.text.TextUtils"/>
@@ -13,87 +15,103 @@
             type="Boolean" />
     </data>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingVertical="6dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
-    <View
-        android:id="@+id/divTds"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/grayBorder"
-        android:visibility="@{isFinalAmount ? View.VISIBLE : View.GONE}"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="6dp"/>
-
-    <TextView
-        android:id="@+id/txtTitle"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/rubik_regular"
-        android:textSize="14sp"
-        app:layout_marginTop="@{isFinalAmount ? 32f : 0f}"
-        android:textColor="@color/text_color2"
-        android:text="@{tdsModel.title}"
-        tools:text="With sdgshdg "
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divTds"/>
+        android:paddingVertical="6dp">
 
-    <View
-        android:id="@+id/toolTip"
-        android:elevation="4dp"
-        android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="@id/txtTitle"
-        app:layout_constraintEnd_toEndOf="@id/ivToolTip"
-        app:layout_constraintStart_toEndOf="@id/txtTitle"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="0dp"/>
 
-    <ImageView
-        android:id="@+id/ivToolTip"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
-        android:visibility="@{TextUtils.isEmpty(tdsModel.toolTip) ? View.GONE : View.VISIBLE}"
-        app:setSrcCompact="@{@drawable/ic_info_outline}"
-        app:tint="@color/text_color2"
-        android:layout_marginStart="4dp"
-        tools:visibility="visible"
-        app:layout_constraintStart_toEndOf="@id/txtTitle"
-        app:layout_constraintTop_toTopOf="@id/txtTitle"
-        app:layout_constraintBottom_toBottomOf="@id/txtTitle"/>
+        <View
+            android:id="@+id/divTds"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/grayBorder"
+            android:visibility="@{isFinalAmount ? View.VISIBLE : View.GONE}"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="6dp"/>
 
-    <TextView
-        android:id="@+id/txtValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/rubik_regular"
-        android:textColor="@color/text_color8"
-        tools:text="441"
-        app:setAmountFormat="@{tdsModel.amount}"
-        app:placeHolder="@{tdsModel.isNegative?`-`+@string/rupees:@string/rupees}"
-        app:placeHolderAtStart="@{true}"
-        app:setTextFont="@{isFinalAmount ? R.font.rubik_medium :  R.font.rubik_regular}"
-        app:setTextSize="@{isFinalAmount ? 16f : 14f}"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/txtTitle"/>
+        <LinearLayout
+            android:id="@+id/txtTitleLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toStartOf="@+id/txtValue1"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginRight="10dp"
+            app:layout_constraintTop_toBottomOf="@id/divTds"
+            app:layout_marginTop="@{isFinalAmount ? 32f : 0f}">
 
-    <TextView
-        android:id="@+id/txtNotes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/rubik_regular"
-        android:textSize="12sp"
-        android:textColor="@color/text_color1"
-        android:text="@{tdsModel.note}"
-        tools:text="With sdgshdg "
-        android:visibility="@{TextUtils.isEmpty(tdsModel.note) ? View.GONE : View.VISIBLE}"
-        app:layout_constraintStart_toStartOf="@id/txtTitle"
-        app:layout_constraintTop_toBottomOf="@id/txtTitle"/>
+            <TextView
+                android:id="@+id/txtTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/rubik_regular"
+                android:text="@{tdsModel.title}"
+                android:textColor="@color/text_color2"
+                android:textSize="12sp"
+                tools:text="With sdgshdg " />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/ivToolTip"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="4dp"
+                android:visibility="@{tdsModel.type == 0? View.GONE : View.VISIBLE}"
+                app:setSrcCompact="@{@drawable/ic_info_outline}"
+                app:tint="@color/text_color2"
+                tools:visibility="visible" />
+
+
+        </LinearLayout>
+
+
+
+        <TextView
+            android:id="@+id/txtValue1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/rubik_medium"
+            android:textColor="@color/text_color8"
+            app:layout_constraintEnd_toStartOf="@+id/txtValue"
+            app:layout_constraintTop_toTopOf="@id/txtTitleLayout"
+            app:placeHolder="@{@string/rupees}"
+            app:placeHolderAtStart="@{true}"
+            android:layout_marginRight="8dp"
+            android:visibility="@{tdsModel.amount2 != 0?View.VISIBLE : View.GONE}"
+            android:background="@drawable/bg_cutline"
+            app:setAmountFormat="@{tdsModel.amount2}"
+            android:textSize="12dp"
+            />
+
+
+        <TextView
+            android:id="@+id/txtValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/rubik_regular"
+            android:textColor="@{tdsModel.amount2 != 0? @color/RummyalertOrange : @color/text_color8}"
+            tools:text="441"
+            app:setAmountFormat="@{tdsModel.amount}"
+            app:placeHolder="@{tdsModel.isNegative?`-`+@string/rupees:@string/rupees}"
+            app:placeHolderAtStart="@{true}"
+            app:setTextFont="@{isFinalAmount ? R.font.rubik_medium :  R.font.rubik_regular}"
+            app:setTextSize="@{isFinalAmount ? 16f : 14f}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/txtTitleLayout"/>
+
+        <TextView
+            android:id="@+id/txtNotes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/rubik_regular"
+            android:textSize="10sp"
+            android:textColor="@color/text_color1"
+            android:text="@{tdsModel.note}"
+            tools:text="With sdgshdg "
+            android:visibility="@{TextUtils.isEmpty(tdsModel.note) ? View.GONE : View.VISIBLE}"
+            app:layout_constraintStart_toStartOf="@id/txtTitleLayout"
+            app:layout_constraintTop_toBottomOf="@id/txtTitleLayout"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
