--- a/app/src/main/res/layout/fragment_bank_verification_rummy.xml
+++ b/app/src/main/res/layout/fragment_bank_verification_rummy.xml
@@ -103,7 +103,10 @@
                         android:layout_gravity="center"
                         android:layout_margin="20dp"
                         android:drawablePadding="5dp"
+                        android:maxLines="3"
                         android:gravity="center"
+                        app:autoSizeTextType="uniform"
+                        app:autoSizePresetSizes="@array/text_sizes_10"
                         android:text="@string/frag_bank_verification_upload_bank_account_proof"
                         android:textColor="@color/cool_grey"
                         android:textSize="10sp"
@@ -223,7 +226,7 @@
                     android:inputType="phone"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:textColor="@color/gunmetal"
+                    android:textColor="@color/text_color8"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/layout"
@@ -259,7 +262,7 @@
                     android:hint="@string/frag_bank_verification_ifsc_code"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:textColor="@color/gunmetal"
+                    android:textColor="@color/text_color8"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/layout"
@@ -294,7 +297,7 @@
                     android:hint="@string/frag_bank_verification_bank_name"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:textColor="@color/gunmetal"
+                    android:textColor="@color/text_color8"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/layout"
