--- a/app/src/main/res/layout/item_avtar_rummy.xml
+++ b/app/src/main/res/layout/item_avtar_rummy.xml
@@ -1,39 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
-        <import type="android.view.View"/>
-        <variable name="viewModel" type="com.rummytitans.sdk.cardgame.ui.profile.avtaar.ProfileAvatarViewModel"/>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="viewModel"
+            type="com.rummytitans.sdk.cardgame.ui.profile.avtaar.ProfileAvatarViewModel" />
     </data>
+
     <androidx.cardview.widget.CardView
-            android:onClick="@{()->viewModel.onClick()}"
-            android:layout_width="60dp" android:layout_height="60dp"
-            app:cardCornerRadius="5dp"
-            android:layout_marginTop="4dp"
-            android:elevation="0dp"
-            android:background='@{viewModel.isSelected()?@drawable/bg_selected_avtar_rummy:@drawable/bg_white_box_rummy}'>
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="4dp"
+        android:background='@{viewModel.isSelected()?@drawable/bg_selected_avtar_rummy:@drawable/bg_white_box_rummy}'
+        android:elevation="0dp"
+        android:onClick="@{()->viewModel.onClick()}"
+        app:cardCornerRadius="5dp">
 
         <ImageView
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                app:setImageUrl="@{viewModel.imageUrl}"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/contentDescriptionAvatar"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/contentDescriptionAvatar"
+            android:orientation="vertical"
+            app:setImageUrl="@{viewModel.imageUrl}" />
 
         <View
-                android:id="@+id/vuCompleted"
-                android:visibility="@{viewModel.isSelected()?View.VISIBLE:View.GONE}"
-                android:layout_width="match_parent" android:layout_height="match_parent"
-                android:background="@color/bluish_green" android:alpha="0.8"/>
+            android:id="@+id/vuCompleted"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.8"
+            android:background="@color/bluish_green"
+            android:visibility="@{viewModel.isSelected()?View.VISIBLE:View.GONE}" />
 
         <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_check_correct"
-                app:tint="@color/white"
-                android:padding="12dp"
-                android:visibility="@{viewModel.isSelected()? View.VISIBLE: View.GONE}"
-                android:contentDescription="@string/contentDescriptionAvatarSelection"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/contentDescriptionAvatarSelection"
+            android:padding="12dp"
+            android:visibility="@{viewModel.isSelected()? View.VISIBLE: View.GONE}"
+            app:srcCompat="@drawable/ic_check_correct"
+            app:tint="@color/white" />
     </androidx.cardview.widget.CardView>
 
 </layout>
