--- a/app/src/main/res/layout/activity_profile_rummy.xml
+++ b/app/src/main/res/layout/activity_profile_rummy.xml
@@ -152,7 +152,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/textView63">
 
                         <TextView
-                            android:id="@+id/textView64"
+                            android:id="@+id/txtTeamName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
