--- a/app/src/main/res/layout/item_wallet_bonus_rummy.xml
+++ b/app/src/main/res/layout/item_wallet_bonus_rummy.xml
@@ -41,7 +41,7 @@
                     android:layout_marginEnd="8dp"
                     android:fontFamily="@font/rubik_regular"
                     android:text="@{viewModel.name}"
-                    android:textColor="@{viewModel.colorCode}"
+                    android:textColor="@color/text_color3"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView76"
                     app:layout_constraintEnd_toEndOf="parent"
