--- a/app/src/main/res/layout/fragment_bank_verification_rummy.xml
+++ b/app/src/main/res/layout/fragment_bank_verification_rummy.xml
@@ -85,7 +85,7 @@
                 <FrameLayout
                     android:id="@+id/frameLayout"
                     android:layout_width="0dp"
-                    android:layout_height="130dp"
+                    android:layout_height="140dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="11dp"
                     android:layout_marginEnd="10dp"
@@ -115,12 +115,13 @@
 
                     <ImageView
                         android:id="@+id/imgPanCard"
-                        android:layout_width="wrap_content"
-                        android:layout_height="80dp"
+                        android:layout_width="130dp"
+                        android:layout_height="90dp"
                         android:layout_gravity="center"
+                        android:scaleType="fitXY"
                         android:visibility='@{TextUtils.isEmpty(viewmodel.getImageUrl)?View.GONE:View.VISIBLE}'
                         app:srcCompat="@drawable/dummy_avtar"
-                        tools:visibility="gone" />
+                        />
 
 
                     <ImageView
@@ -187,6 +188,7 @@
                     android:hint="@string/frag_bank_verification_account_number"
                     android:inputType="phone"
                     android:maxLines="1"
+                    android:maxLength="25"
                     android:singleLine="true"
                     android:textColor="@color/text_color8"
                     android:textSize="14sp"
@@ -225,6 +227,7 @@
                     android:hint="@string/frag_bank_verification_re_enter_account_number"
                     android:inputType="phone"
                     android:maxLines="1"
+                    android:maxLength="25"
                     android:singleLine="true"
                     android:textColor="@color/text_color8"
                     android:textSize="14sp"
