--- a/app/src/main/res/layout/fragment_pan_verification_rummy.xml
+++ b/app/src/main/res/layout/fragment_pan_verification_rummy.xml
@@ -70,7 +70,7 @@
                 <FrameLayout
                     android:id="@+id/frameLayout"
                     android:layout_width="0dp"
-                    android:layout_height="100dp"
+                    android:layout_height="110dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="11dp"
                     android:layout_marginEnd="10dp"
@@ -95,9 +95,10 @@
 
                     <ImageView
                         android:id="@+id/imgPanCard"
-                        android:layout_width="wrap_content"
-                        android:layout_height="80dp"
+                        android:layout_width="130dp"
+                        android:layout_height="90dp"
                         android:layout_gravity="center"
+                        android:scaleType="fitXY"
                         android:visibility='@{TextUtils.isEmpty(viewmodel.getImageUrl)?View.GONE:View.VISIBLE}'
                         app:srcCompat="@drawable/dummy_avtar" />
 
