--- a/app/src/main/res/layout/item_verfification_rummy.xml
+++ b/app/src/main/res/layout/item_verfification_rummy.xml
@@ -16,8 +16,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutRoot"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+         android:paddingVertical="8dp"
         android:elevation="3dp"
         app:setViewBackground="@{@color/rummy_black_3}"
         app:strokeColor="@{@color/grayBorder}"
@@ -63,7 +64,7 @@
             android:id="@+id/cl1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/txtValue"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -97,7 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:background="@drawable/bg_primary_box_rummy"
-            android:backgroundTint="@color/rummy_maingreen"
+            android:backgroundTint="@{data.disabled ? @color/gray2 : @color/rummy_maingreen}"
             android:fontFamily="@font/rubik_medium"
             android:paddingLeft="12dp"
             android:paddingTop="5dp"
@@ -112,6 +113,47 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.Group
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="@{TextUtils.isEmpty(data.message) || data.isPanding ?View.GONE:View.VISIBLE}"
+            app:constraint_referenced_ids="txtError,viewBg,ivAlert"/>
+        <TextView
+            android:id="@+id/txtError"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/rubik_regular"
+            android:padding="8dp"
+            android:text="@{data.message}"
+            android:textColor="@color/compare_red"
+            android:textSize="10sp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="@id/viewBg"
+            app:layout_constraintStart_toEndOf="@id/ivAlert"
+            app:layout_constraintTop_toBottomOf="@id/cl1"/>
+        <ImageView
+            android:id="@+id/ivAlert"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintEnd_toStartOf="@id/txtError"
+            app:layout_constraintStart_toStartOf="@id/viewBg"
+            app:layout_constraintTop_toTopOf="@id/txtError"
+            app:srcCompat="@drawable/ic_news_alert"
+            app:tint="@color/tomato_red" />
+        <View
+            android:id="@+id/viewBg"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="8dp"
+            android:padding="18dp"
+            android:background="@drawable/bg_withdraw_error"
+            app:layout_constraintBottom_toBottomOf="@id/txtError"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/txtError" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
