--- a/app/src/main/res/layout/item_verfification_rummy.xml
+++ b/app/src/main/res/layout/item_verfification_rummy.xml
@@ -98,7 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:background="@drawable/bg_primary_box_rummy"
-            android:backgroundTint="@{data.disabled ? @color/gray2 : @color/rummy_maingreen}"
+            android:backgroundTint="@{data.blocked ? @color/gray2 : @color/rummy_maingreen}"
             android:fontFamily="@font/rubik_medium"
             android:paddingLeft="12dp"
             android:paddingTop="5dp"
@@ -114,10 +114,14 @@
             app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <!--
+            hide error view when message is empty or documents is in under Process
+        -->
+
         <androidx.constraintlayout.widget.Group
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="@{TextUtils.isEmpty(data.message) || data.isPanding ?View.GONE:View.VISIBLE}"
+            android:visibility="@{TextUtils.isEmpty(data.message) || data.pending ?View.GONE:View.VISIBLE}"
             app:constraint_referenced_ids="txtError,viewBg,ivAlert"/>
         <TextView
             android:id="@+id/txtError"
