--- a/app/src/main/res/layout/fragment_verify_rummy.xml
+++ b/app/src/main/res/layout/fragment_verify_rummy.xml
@@ -99,7 +99,31 @@
                         android:textColor="@color/text_color8"
                         android:textColorHint="@color/text_color2"
                         android:textSize="14sp"
+                        android:visibility="@{viewmodel.verificationInfo.emailVerify ? View.INVISIBLE : View.VISIBLE}"
                         app:layout_constraintVertical_chainStyle="packed"
+                        app:bottomPadding="@{viewmodel.verificationInfo.emailVerify ? 0 : 20}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/imgEmailVerify"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView11"
+                        app:removeDefaultPadding="@{true}"
+                        app:topPadding="@{viewmodel.verificationInfo.emailVerify ? 0 : 20}" />
+
+                    <!--
+                        if email is verified then this view show in other cases it will be hide.
+                    -->
+                    <TextView
+                        android:id="@+id/txtEmailAds"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:fontFamily="@font/rubik_medium"
+                        android:singleLine="true"
+                        android:ellipsize="marquee"
+                        android:textColor="@color/text_color8"
+                        android:textSize="14sp"
+                        app:layout_constraintVertical_chainStyle="packed"
+                        android:visibility="@{viewmodel.verificationInfo.emailVerify ? View.VISIBLE : View.GONE}"
                         app:bottomPadding="@{viewmodel.verificationInfo.emailVerify ? 0 : 20}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/imgEmailVerify"
