--- a/app/src/main/res/layout/fragment_verify_rummy.xml
+++ b/app/src/main/res/layout/fragment_verify_rummy.xml
@@ -90,6 +90,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
+                        android:layout_marginTop="10dp"
                         android:backgroundTint="@{viewmodel.verificationInfo.emailVerify ? @color/text_color5 : @color/text_color2}"
                         android:enabled="@{viewmodel.verificationInfo.emailVerify?false:true}"
                         android:focusable='@{viewmodel.verificationInfo.emailVerify?false:true}'
@@ -117,6 +118,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
+                        android:layout_marginTop="10dp"
                         android:fontFamily="@font/rubik_medium"
                         android:singleLine="true"
                         android:ellipsize="marquee"
@@ -129,7 +131,6 @@
                         app:layout_constraintEnd_toStartOf="@+id/imgEmailVerify"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView11"
-                        app:removeDefaultPadding="@{true}"
                         app:topPadding="@{viewmodel.verificationInfo.emailVerify ? 0 : 20}" />
 
 
